# postmagiq

./: .env.example  .gitignore  AUDIT_REPORT.md  AWS_DEPLOYMENT_PLAN.md  CLAUDE.md  CLOUD_COST_COMPARISON.md  Dockerfile.api  Dockerfile.gui  GCP_DEPLOYMENT_PLAN.md  GROQ_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_TRACKER.md  MULTI_TENANCY_PLAN.md  Makefile  Makefile.ci  OPTIMIZATION_PLAN.md  PLAN_BUSINESS_UPGRADE_FLOW.md  PLAN_DIRECT_PUBLISHING.md  PLAN_MVP_UI_CLEANUP.md  README.md  SOCIAL_ANALYTICS_PRODUCT_AUDIT.md  WORKFLOW_ORCHESTRATION_PLAN.md  docker-compose.gpu.yml  docker-compose.yml  market_upgrade_plan.md  pyproject.toml  requirements-api.txt  workflow_config.groq.yaml  workflow_config.ollama.yaml  workflow_config.yaml
api/: constants.py  error_handlers.py  exceptions.py  main.py  middleware.py  responses.py
data/: __init__.py  image_defaults.py
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  RLM_IMPLEMENTATION_PLAN.md  SOCIAL_PUBLISHING_SETUP.md
dump/: LAUNCH_SIMPLIFICATION_PLAN.md  MODULAR_PERSONA_PLAN.md  PLAN_HIDE_MULTITENANCY.md  launch_readiness_plan.md
gui/: .env.example  DESIGN_PLAN.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
hooks/: commit-msg  filter-attribution.sh  install.sh  pre-commit
prompts/: ai_detector_persona.md  auditor_persona.md  input_validator_persona.md  story_processor_persona.md  story_reviewer_persona.md  strategy_onboarding_persona.md  synthesizer_persona.md  universal_rules.md  writer_persona.md
reference_code/: groq.js
runner/: __init__.py  circuit_breaker.py  config.py  models.py  runner.py  state_machine.py
scripts/: seed_dev_users.py  (+6 more)
(+419 files in other folders)
